# corrjoin

./: .gitignore  BUILD.bazel  Dockerfile  Dockerfile-kafka  Dockerfile-receiver  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  publish.sh
.github/workflows/: test.yaml
documentation/: explorerDataModel.plantuml
explorer/: correlations_3_20250130161507-20250130161916.pq  data_processor.go  data_processor_test.go  explorer.go  explorer_test.go  model.go
explorer/templates/: index.tmpl
explorer/testdata/: correlations_2_20250328105539-20250328112859.pq  correlations_3_20250328111220-20250328114539.pq  correlations_4_20250227153854-20250227155533.pq
frontend/: app.go
frontend/templates/: cluster.tmpl  correlations.tmpl  index.tmpl
kafka/: kafka-processor.go
lib/: BUILD.bazel  process_ts_window.go  tsaccumulator.go  tsaccumulator_test.go  tsmatrix.go  tsmatrix_test.go  tswindow.go  tswindow_test.go
lib/buckets/: BUILD.bazel  buckets.go  buckets_test.go
lib/comparisons/: base_comparer.go  base_comparer_test.go  engine_api.go  in_process_comparisons.go  kafka_comparer.go  kafka_comparer_test.go
lib/correlation/: BUILD.bazel  utils.go  utils_test.go
lib/datatypes/: types.go  types_test.go
lib/explorer/: model.go  parquet_explorer.go  parquet_explorer_test.go  timestamps.go  timestamps_test.go  tmp
lib/explorer/testdata/: correlations_4_20250328112900-20250328120219.pq
lib/kafka/: message_types.go
lib/paa/: BUILD.bazel  paa.go  paa_test.go
lib/reporter/: .correlated_set.go.swp  correlated_set.go  correlated_set_test.go  csv_reporter.go  parquet_reporter.go  parquet_reporter_test.go  reporter_api.go
lib/settings/: settings.go
lib/svd/: BUILD.bazel  truncatedsvd.go
lib/utils/: .utils.go.swp  utils.go
main/: BUILD.bazel  process_data_from_file.go
prometheus/: BUILD.bazel  Dockerfile  README.md  publish.sh  receiver.go
receiver/: BUILD.bazel  receiver.go
setup/: cluster-config.yaml  ingress-deploy.yaml  install-corrjoin.sh  install-loadtestenv.sh  install.sh  mattermost-config.yaml  mattermost-installation.yaml  prometheus-values.yaml  receiver-service-monitor.yaml  setup-local.sh  setup.sh  start-loadtest.sh  stop-loadtest.sh  strimzi-cluster-operator-0.43.0.yaml  strimzi-single-node.yaml
setup/apache/: Dockerfile  httpd.conf
setup/helm/apache/: Chart.yaml  httpd.conf  values-cloud.yaml  values-local.yaml
setup/helm/apache/files/: apache-exporter-dashboard.json
setup/helm/apache/templates/: apache-exporter-dashboard.yaml  configmap.yaml  deployment.yaml  exporter.yaml  podmonitor.yaml  prometheus-rules.yaml  service.yaml  serviceaccount.yaml
setup/helm/corrjoin/: Chart.yaml  lv-podmonitor.yaml  values-cloud.yaml  values-local.yaml
setup/helm/corrjoin/files/: corrjoin-stats.json  entrypoint-dashboard.json  explore-metrics.json  explore-strides.json
setup/helm/corrjoin/templates/: apache-exporter-dashboard.yaml  corrjoin-stats.yaml  demo-dashboard.yaml  entrypoint-dashboard.yaml  explore-metrics.yaml  explore-strides.yaml  grafana-secret.yaml  loadtest-performance-dashboard.yaml  lv-podmonitor.yaml  receiver-deployment.yaml  receiver-results-pv-localstorage.yaml  receiver-results-pvc-ceph.yaml
setup/helm/loadtest/: Chart.yaml  values-cloud.yaml  values-local.yaml
setup/helm/loadtest/files/: loadtest-performance-dashboard.json
setup/helm/loadtest/templates/: loadtest-performance-dashboard.yaml  pod.yaml  podmonitor.yaml  prometheus-rules.yaml  serviceaccount.yaml  stresspod.yaml
setup/helm/postgres/: Chart.yaml  values-cloud.yaml  values-local.yaml
setup/helm/postgres/files/: postgres-dashboard.json
setup/helm/postgres/templates/: configmap.yaml  create-mm-db.yaml  dbsetup.configmap.yaml  deployment.yaml  exporter.yaml  (+8 more)
setup/inventory/k8s/: inventory.ini
setup/kafka-worker/: deployment.yaml
setup/loadtest/: Dockerfile  Dockerfile-stress  config.json
setup/receiver/: gateway.yaml  ingress.yaml  receiver-deployment.yaml  receiver-results-pv.yaml  receiver-results-pvc-ceph.yaml  receiver-svc.yaml
setup/rook/: ceph-values.yaml  rook-values.yaml
setup/traefik/: start-traefik.sh  traefik.yml
setup/traefik/config/: dynamic.yml
tools/: convert_csv_to_hdf5.py  convert_parquet_to_hdf5.py  edges_45.csv  export_as_hd5f.py  requirements.txt
(+5 files in other folders)
