load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "main_lib",
    srcs = ["process_data_from_file.go"],
    importpath = "github.com/kpaschen/corrjoin/main",
    visibility = ["//visibility:private"],
    deps = [
        "//lib",
        "@org_gonum_v1_gonum//mat",
    ],
)

go_binary(
    name = "main",
    embed = [":main_lib"],
    visibility = ["//visibility:public"],
)
