load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "buckets",
    srcs = ["buckets.go"],
    importpath = "github.com/kpaschen/corrjoin/lib/buckets",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/correlation",
        "//lib/paa",
        "@org_gonum_v1_gonum//mat",
    ],
)

go_test(
    name = "buckets_test",
    size = "small",
    srcs = ["buckets_test.go"],
    embed = [":buckets"],
    deps = ["@org_gonum_v1_gonum//mat"],
)
