load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "correlation",
    srcs = ["utils.go"],
    importpath = "github.com/kpaschen/corrjoin/lib/correlation",
    visibility = ["//visibility:public"],
)

go_test(
    name = "correlation_test",
    size = "small",
    srcs = ["utils_test.go"],
    embed = [":correlation"],
)
