load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "paa",
    srcs = ["paa.go"],
    importpath = "github.com/kpaschen/corrjoin/lib/paa",
    visibility = ["//visibility:public"],
    deps = ["@org_gonum_v1_gonum//mat"],
)

go_test(
    name = "paa_test",
    size = "small",
    srcs = ["paa_test.go"],
    embed = [":paa"],
    deps = ["@org_gonum_v1_gonum//mat"],
)
